	PR c++/47897 	* semantics.c (non_const_var_error): Split out from... 	(cxx_eval_constant_expression): ...here. 	(potential_constant_expression_1) [VAR_DECL]: Use it. 	Allow dependent variables.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170532 138bc75d-0d04-0410-961f-82ee72b054a4