gcc/testsuite/g++.dg/debug/debug7.C
@@ -1,4 +1,5 @@
 // { dg-do compile }
+// { dg-prune-output "note" }
 
 void f (int);
 
